--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yovy - Chat Interface</title>
+    <title>URVA</title>
+    <meta name="description" content="urva">
     <link rel="shortcut icon" type="image/x-icon">
     <script type="module" src="./index.tsx"></script>
 </head>
